--- a/iOS/NavJsSwiftDemo/NavJsSwiftDemo/Base.lproj/Main.storyboard
+++ b/iOS/NavJsSwiftDemo/NavJsSwiftDemo/Base.lproj/Main.storyboard
@@ -34,6 +34,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uu4-gy-Ilc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="1" green="0.225663801" blue="0.36629201239999998" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
