--- a/Android/NavJsDemo/app/src/main/res/layout/activity_main.xml
+++ b/Android/NavJsDemo/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.haobtc.navjsdemo.MainActivity">
+    android:paddingBottom="0dp"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingTop="0dp"
+    tools:context="com.haobtc.navjsdemo.MainActivity"
+    android:clickable="true"
+    android:padding="0dp">
 
     <WebView
         android:layout_width="fill_parent"
